Blev ungefär klar med Nav
Måste fixa eftersom den fungerar inte

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,78 @@
 /* Denna fil skall innehålla din CSS kod */
+#wrapper {
+    border: solid black 1px
+}
+
+* {
+    margin: 0px; 
+    padding: 0px; 
+    box-sizing: border-box; 
+}
+
+
+nav {
+    display: flex;
+    justify-content: flex-end; 
+    align-items: center; 
+    height: 10vh; 
+    background-color: grey;
+    font-family: sans-serif;
+    
+}
+
+.burger {
+    margin-right: 50px; 
+    cursor: pointer; 
+}
+
+.navLinks {
+    display: flex;
+    flex-direction: column; 
+    justify-content: space-around;
+    position: absolute; 
+    left: 0px; 
+    height: 90vh; 
+    top: -90vh;
+    background-color: grey;
+    align-items: center; 
+    width: 20%; 
+    transition: all 1s; 
+}
+
+.navActive{
+    transform: translateY(100vh)
+}
+
+.navLinks li {
+    list-style: none; 
+}
+
+.navLinks a {
+    color: black; 
+    text-decoration: none; 
+    letter-spacing: 3px;
+    font-weight: bold; 
+    font-size: 20px; 
+}
+
+.burger div {
+    width: 25px; 
+    height: 3px;
+    background-color: black;
+    margin: 5px; 
+    border-radius: 10%; 
+    transition: all 0.3s; 
+}
+
+.line1 {
+    transform: rotate(-45deg) translate( -5px, 6px); 
+}
+
+.line2 {
+    opacity: 0; 
+}
+
+.line3 {
+    transform: rotate(45deg) translate( -5px, -6px);
+}
+
