la till boxtext

--- a/css/style.css
+++ b/css/style.css
@@ -49,17 +49,17 @@
 
 header {
     grid-area: hea;
-    background-color: grey; 
+    background-color: #1a1a1d; 
 }
 
 #section1 {
     grid-area: s01; 
     background-color: none;
-    background-image: url(../img/christina-dibernardo-cdI-r1QlCvo-unsplash.jpg);
+    background-image: url(../img/garin-chadwick-ECSP5pDeCI4-unsplash.jpg);
     background-size: 100%;
     background-size: contain;
     background-size: cover;
-    filter: blur(4px);
+   
    
     
 }
@@ -71,6 +71,21 @@ header {
     background-color:#1a1a1d;
 }
 
+#boxtext {
+    width: 350px;
+    height: 200px;
+    background-color:#4e4e50;
+    position: absolute; 
+    top: 250px;
+    left: 75px;
+    border-radius: 10px;
+}
+
+#boxtext p {
+    color: white; 
+    padding-top: 20px;
+    margin-left: 20px;
+}
 
 * {
     margin: 0px; 
@@ -85,7 +100,7 @@ nav {
     justify-content: flex-start; 
     align-items: center; 
     height: 10vh; 
-    background-color: grey;
+    background-color: #1a1a1d;
     font-family: sans-serif;
     z-index: 1;
     
@@ -104,7 +119,7 @@ nav {
     left: 0px; 
     height: 90vh; 
     top: -90vh;
-    background-color: yellow;
+    background-color: #1a1a1d;
     align-items: center; 
     width: 100%; 
     transition: all 1s; 
@@ -119,7 +134,7 @@ nav {
 }
 
 .navLinks a {
-    color: black; 
+    color: white; 
     text-decoration: none; 
     letter-spacing: 3px;
     font-weight: bold; 
@@ -129,7 +144,7 @@ nav {
 .burger div {
     width: 25px; 
     height: 3px;
-    background-color: black;
+    background-color: white;
     margin: 5px; 
     border-radius: 10%; 
     transition: all 0.3s; 
