--- a/css/style.css
+++ b/css/style.css
@@ -5,26 +5,14 @@
     grid-template-areas: 
      'nav nav'
      's01 s01'
-     'art art'
     
     ;
     grid-template-columns: 20% 80%; 
-    grid-template-rows: 10vh 100vh 20vh;
+    grid-template-rows: 10vh 120vh;
 
 }
 
 @media screen and (min-width: 800px) {
-    
-#wrapper {
-    grid-template-areas: 
-        'nav hea hea'
-        's01 s01 s01'
-        'art art art';
-    grid-template-areas: repeat (3, 1fr);
-    grid-template-rows: 10vh 30vh 30vh 30vh; 
-}
-        
-
 
 nav {
         display: flex; 
@@ -69,12 +57,24 @@ header {
 }
 
 #boxtext {
+    
     width: 350px;
     height: 200px;
     background-color:#4e4e50;
     position: absolute; 
     top: 250px;
-    left: 70px;
+    left: 75px;
+    border-radius: 10px;
+}
+
+
+.slideshow {
+    width: 300px;
+    height: 400px;
+    background-color: #1a1a1d; 
+    position: absolute; 
+    left: 100px;
+    top: 500px;
     border-radius: 10px;
 }
 
