--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,26 @@ header {
     left: 100px;
     top: 500px;
     border-radius: 10px;
+
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    right: 0;
 }
 
 #boxtext p {
