PLacerade bild i sidan

--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,12 @@ footer {
 
 }
 
+.picture1 {
+    background-image: url(../img/alex-shu-WzRAL_jsb2k-unsplash.jpg);
+    height: 250px;
+    width: 200px; 
+    background-size: 100%;
+}
 
 
 
