--- a/css/style.css
+++ b/css/style.css
@@ -188,13 +188,13 @@ nav {
     'sta sta'
     'fot fot'
     ;
-    grid-template-rows: 10vh 90vh 20vh; 
+    grid-template-rows: 10vh 120vh 20vh; 
 }
 
 .starticle {
     margin: 20px;
     display: flex;
-    flex-direction: columns; 
+    flex-direction: column; 
     justify-content: center;
     align-items: center;
 }
@@ -206,6 +206,21 @@ nav {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    align-content: flex-start;
+}
+
+
+.starticle li{
+    letter-spacing: 0px;
+    font-size: 15px;
+    list-style: none; 
+}
+
+.starticle li a {
+    letter-spacing: 0px;
+    font-size: 15px;
+    color: #1a1a1d;
+    text-decoration: none;
 }
 
 footer {
