--- a/css/style.css
+++ b/css/style.css
@@ -247,36 +247,50 @@ footer {
     display: grid; 
     grid-template-areas:
     'nav nav'
+    'ite ite'
     'fet fet'
+    
     ;
     grid-template-rows: 10vh 100vh 20vh;
 }
 
+.container {
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    margin-bottom: 55px;
+}
+
 .itemcontainer {
+    grid-area: ite;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     width: 80%;
 }
-.itemphoto1 {
+.stairphoto1 {
     background-image: url(../img/alex-shu-WzRAL_jsb2k-unsplash.jpg);
     background-size: 100%;
     height: 50vh;
-    width: 43vh;
+    width: 40vh;
+    display: flex;
+    justify-content: space-between;
 }
 
 .button {
     background-color: #1a1a1d;
     width:200px;
     height:50px;
-    border-radius: 15px;
+    border-radius: 5px;
     font-size: 20px;
-    color: rgb(236, 236, 195);
+    color: white;
 }
 
 .feetsies {
     grid-area: fet;
     background-color: #1a1a1d;
     height: 15vh;
+    width: 100vw;
 }
