--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,22 @@ nav {
 .toggle .line3 {
     transform: rotate (45deg) translate( -5px, -6px);
 }
-
+#logocontainer {
+    position: absolute;
+    left: 75px;
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#logo {
+    height: 50px;
+    width: 100px;
+    font-size: 24px;
+    display: flex; 
+    align-items: center;
+    color: white;
+}
 /* CSS för kopsida.html */
 #wrapperk {
     height: 100vh; 
@@ -278,6 +293,10 @@ footer {
     justify-content: space-between;
 }
 
+.iteminfo {
+    margin: 20px;
+}
+
 .button {
     background-color: #1a1a1d;
     width:200px;
@@ -293,3 +312,4 @@ footer {
     height: 15vh;
     width: 100vw;
 }
+
